--- a/index.html
+++ b/index.html
@@ -4,30 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Death Walrus Studios</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Quicksand', sans-serif;
             text-align: center;
-            margin: 50px;
-            background-color: #1a1a1a;
-            color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            background-color: #2B4141; /* Dark Slate Gray */
+            color: #F0EAD6; /* Paragraph text color */
+        }
+        header {
+            background-color: #0EB1D2; /* Accent Color 1 */
+            padding: 20px;
+        }
+        header img {
+            width: 150px;
         }
         h1 {
-            color: #e74c3c;
+            color: #34E4EA; /* Accent Color 2 */
+            font-size: 3em;
+            margin: 20px 0;
+        }
+        p {
+            font-size: 1.2em;
+            margin: 15px 20px;
+            color: #F0EAD6; /* Paragraph text color */
         }
         a {
-            color: #3498db;
+            color: #0EB1D2; /* Accent Color 1 */
             text-decoration: none;
+            font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
+            color: #34E4EA; /* Accent Color 2 on hover */
+        }
+        footer {
+            margin-top: 50px;
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Death Walrus Studios</h1>
-    <p>We are a passionate indie game development studio focused on creating immersive 2D experiences.</p>
-    <p>Follow us on our journey as we craft unique and engaging games using Godot and Aseprite.</p>
-    <p>Check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for more updates and projects.</p>
+    <header>
+        <img src="logo.png" alt="Death Walrus Studios Logo">
+    </header>
+
+    <h1>Welcome to Death Walrus Studios!</h1>
+    <p>We are a small, scrappy indie game studio crafting fun and quirky 2D games. Whether we're sliding on ice or battling baddies, we're here to bring you joy and a few laughs along the way.</p>
+    <p>Come join our adventure as we create, play, and explore the wonderful world of gaming. Stay tuned for our upcoming projects, and don't forget to check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for the latest updates!</p>
+    
+    <footer>
+        <p>Made with 💙 by Death Walrus Studios</p>
+    </footer>
 </body>
 </html>
