add logo and update colors

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #2B4141; /* Dark Slate Gray */
+            background-color: #333;
             color: #F0EAD6; /* Paragraph text color */
         }
         header {
-            background-color: #0EB1D2; /* Accent Color 1 */
+          background-color: #333;  
+          /* background-color: #0EB1D2; /* Accent Color 1 */
             padding: 20px;
         }
         header img {
