--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #333;
+            background-color: #262523;
             color: #F0EAD6; /* Paragraph text color */
         }
         header {
-          background-color: #333;  
+          background-color: #262523;  
           /* background-color: #0EB1D2; /* Accent Color 1 */
             padding: 20px;
         }
@@ -23,7 +23,7 @@
             width: 150px;
         }
         h1 {
-            color: #34E4EA; /* Accent Color 2 */
+            color: #424242;; /* Accent Color 2 */
             font-size: 3em;
             margin: 20px 0;
         }
@@ -43,7 +43,7 @@
         }
         footer {
             margin-top: 50px;
-            background-color: #333;
+            background-color: #262523;
             color: white;
             padding: 10px 0;
         }
@@ -54,7 +54,7 @@
         <img src="logo.png" alt="Death Walrus Studios Logo">
     </header>
 
-    <h1>Welcome to Death Walrus Studios!</h1>
+    <h1>Death Walrus Studios</h1>
     <p>We are a small, scrappy indie game studio crafting fun and quirky 2D games. Whether we're sliding on ice or battling baddies, we're here to bring you joy and a few laughs along the way.</p>
     <p>Come join our adventure as we create, play, and explore the wonderful world of gaming. Stay tuned for our upcoming projects, and don't forget to check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for the latest updates!</p>
     
