add logo and update colors

--- a/index.html
+++ b/index.html
@@ -4,47 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Death Walrus Studios</title>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+
     <style>
         body {
-            font-family: 'Quicksand', sans-serif;
+            font-family: 'Nunito', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
             background-color: #262523;
-            color: #F0EAD6; /* Paragraph text color */
+            color: #F0EAD6;
         }
         header {
-          background-color: #262523;  
-          /* background-color: #0EB1D2; /* Accent Color 1 */
+            background-color: #262523;
             padding: 20px;
         }
         header img {
             width: 150px;
         }
         h1 {
-            color: #424242;; /* Accent Color 2 */
+            font-family: 'East Sea Dokdo', cursive;
+            color: #F0EAD6;
             font-size: 3em;
             margin: 20px 0;
         }
         p {
+            font-family: 'Nunito', sans-serif;
             font-size: 1.2em;
             margin: 15px 20px;
-            color: #F0EAD6; /* Paragraph text color */
+            color: #F0EAD6;
         }
         a {
-            color: #0EB1D2; /* Accent Color 1 */
+            color: #0EB1D2;
             text-decoration: none;
             font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
-            color: #34E4EA; /* Accent Color 2 on hover */
+            color: #34E4EA;
         }
         footer {
             margin-top: 50px;
             background-color: #262523;
-            color: white;
+            color: #F0EAD6;
             padding: 10px 0;
         }
     </style>
@@ -55,11 +65,12 @@
     </header>
 
     <h1>Death Walrus Studios</h1>
-    <p>We are a small, scrappy indie game studio crafting fun and quirky 2D games. Whether we're sliding on ice or battling baddies, we're here to bring you joy and a few laughs along the way.</p>
-    <p>Come join our adventure as we create, play, and explore the wonderful world of gaming. Stay tuned for our upcoming projects, and don't forget to check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for the latest updates!</p>
+    <p>Welcome Death Walrus Studios! We're a small but mighty indie game dev team that loves creating games.</p>
+    <p>We're just getting started on our journey, so stick around! Follow us on our quest to bring unique and engaging games to life. Check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for sneak peeks, updates, and behind-the-scenes madness.</p>
     
     <footer>
-        <p>Made with 💙 by Death Walrus Studios</p>
+        <p>Made with 💙 by the Death Walrus crew. Stay quirky!</p>
     </footer>
 </body>
 </html>
+
