update to add basic crappy bios

--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
             font-family: 'Nunito', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000;
+            background-color: #262523;
             color: #F0EAD6;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             min-height: 100vh;
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
         header {
-            background-color: #000;
+            background-color: #262523;
             padding: 20px;
             width: 100%;
             display: flex;
@@ -47,6 +48,7 @@
             max-width: 800px;
             padding: 20px;
             text-align: center;
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
         h1 {
@@ -85,7 +87,7 @@
 
         .team-member {
             text-align: center;
-            max-width: 150px;
+            max-width: 200px;
         }
 
         .team-member img {
@@ -119,7 +121,7 @@
 
         footer {
             margin-top: 50px;
-            background-color: #000;
+            background-color: #262523;
             color: #F0EAD6;
             padding: 10px 0;
             width: 100%;
@@ -157,21 +159,25 @@
                     <img src="logo.png" alt="Alex Lutz">
                     <h3>Alex Lutz</h3>
                     <p>Lead Programmer & Studio Director</p>
+                    <p>Alex has a deep passion for coding and leadership, bringing over a decade of experience in game development and software engineering to guide the team at Death Walrus Studios.</p>
                 </div>
                 <div class="team-member">
                     <img src="logo.png" alt="Cohen Derry">
                     <h3>Cohen Derry</h3>
                     <p>Lead Artist</p>
+                    <p>Cohen is the creative force behind the studio's unique art style, blending traditional and digital techniques to create visually striking and memorable game worlds.</p>
                 </div>
                 <div class="team-member">
                     <img src="logo.png" alt="Kipton Derry">
                     <h3>Kipton Derry</h3>
                     <p>Game Designer & Marketing</p>
+                    <p>Kipton brings fresh ideas and innovative designs to the table, while also managing the studio's outreach and ensuring our games find their audience.</p>
                 </div>
                 <div class="team-member">
                     <img src="logo.png" alt="Tynan Portillo">
                     <h3>Tynan Portillo</h3>
                     <p>Lead Composer</p>
+                    <p>Tynan crafts the soundscapes that define our games, using his musical talents to create immersive and unforgettable auditory experiences.</p>
                 </div>
             </div>
         </section>
