--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         header img {
-            width: 150px;
+            width: 300px;
         }
 
         main {
@@ -54,7 +54,7 @@
         h1 {
             font-family: 'East Sea Dokdo', cursive;
             color: #F0EAD6;
-            font-size: 3em;
+            font-size: 4em;
             margin: 20px 0;
             letter-spacing: 2px;
         }
@@ -178,7 +178,7 @@
                     <img src="logo.png" alt="Alex Lutz">
                     <h3>Alex Lutz</h3>
                     <p>Lead Programmer & Studio Director</p>
-                    <p>Alex has a deep passion for coding and leadership, bringing over a decade of experience in game development and software engineering to guide the team at Death Walrus Studios.</p>
+                    <p>Alex has a deep passion for coding and leadership, bringing over a decade of experience in development and software engineering to guide the team at Death Walrus Studios.</p>
                 </div>
                 <div class="team-member">
                     <img src="logo.png" alt="Cohen Derry">
