--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         h1 {
             font-family: 'East Sea Dokdo', cursive;
             color: #F0EAD6;
-            font-size: 4em;
+            font-size: 6em;
             margin: 20px 0;
             letter-spacing: 2px;
         }
@@ -168,11 +168,11 @@
 
     <main>
         <h1>DEATH WALRUS STUDIOS</h1>
-        <p>Welcome to Death Walrus Studios! We're a small but mighty indie game dev team that loves creating fun, quirky, and engaging games.</p>
-        <p>We're just getting started on our journey, so stick around! Follow us on our quest to bring unique and exciting games to life. Check out our <a href="https://github.com/deathwalrusstudios">GitHub</a> for sneak peeks, updates, and behind-the-scenes madness.</p>
+        <p>We're a small but mighty indie game dev team that loves creating games.</p>
+        <p>We're just getting started on our journey, so stick around! Follow us on our quest to bring unique and exciting games to life. Check out our <a href="https://github.com/Death-Walrus-Studios">GitHub</a> for sneak peeks, updates, and behind-the-scenes madness.</p>
         
         <section class="team-section">
-            <h2>Meet the Team</h2>
+            <h2>The Crew</h2>
             <div class="team-members">
                 <div class="team-member">
                     <img src="logo.png" alt="Alex Lutz">
