--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         .team-section h2 {
             font-family: 'East Sea Dokdo', cursive;
             color: #F0EAD6;
-            font-size: 2.5em;
+            font-size: 4em;
             margin-bottom: 20px;
         }
 
@@ -172,7 +172,7 @@
         <p>We're just getting started on our journey, so stick around! Follow us on our quest to bring unique and exciting games to life. Check out our <a href="https://github.com/Death-Walrus-Studios">GitHub</a> for sneak peeks, updates, and behind-the-scenes madness.</p>
         
         <section class="team-section">
-            <h2>The Crew</h2>
+            <h2>THE CREW</h2>
             <div class="team-members">
                 <div class="team-member">
                     <img src="logo.png" alt="Alex Lutz">
@@ -189,8 +189,8 @@
                 <div class="team-member">
                     <img src="logo.png" alt="Kipton Derry">
                     <h3>Kipton Derry</h3>
-                    <p>Game Designer & Marketing</p>
-                    <p>Kipton brings fresh ideas and innovative designs to the table, while also managing the studio's outreach and ensuring our games find their audience.</p>
+                    <p>Lead QA & Game Designer</p>
+                    <p>Kipton excels in ensuring the quality and playability of our games, meticulously testing every detail. His keen eye for design and quality assurance guarantees that each game is both fun and flawless.</p>
                 </div>
                 <div class="team-member">
                     <img src="logo.png" alt="Tynan Portillo">
@@ -203,7 +203,7 @@
     </main>
     
     <footer>
-        <p>Made with 💙 by the Death Walrus crew</p>
+        <p>Made with 🤍 by the Death Walrus crew</p>
     </footer>
 </body>
 </html>
