--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Death Walrus Studios</title>
-    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -16,7 +16,7 @@
 
     <style>
         body {
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Roboto Mono', monospace; /* Changed to Roboto Mono */
             margin: 0;
             padding: 0;
             background-color: #000;
@@ -60,7 +60,7 @@
         }
 
         p {
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Roboto Mono', monospace; /* Applied Roboto Mono to paragraphs */
             font-size: 1.2em;
             margin: 15px 20px;
             color: #F0EAD6;
@@ -100,7 +100,7 @@
         }
 
         .team-member h3 {
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Roboto Mono', monospace; /* Applied Roboto Mono to team member names */
             font-size: 1.3em; /* Slightly larger name font */
             margin-bottom: 10px;
             color: #0EB1D2;
@@ -143,7 +143,7 @@
 
         @media (max-width: 600px) {
             h1 {
-                font-size: 2.5em;
+                font-size: 4em;
             }
             p {
                 font-size: 1em;
