update blurb, add links

--- a/index.html
+++ b/index.html
@@ -174,8 +174,12 @@
 
     <main>
         <h1>DEATH WALRUS STUDIOS</h1>
-        <p>We're a small but mighty indie game dev team that loves creating games.</p>
-        <p>We're just getting started on our journey, so stick around! Follow us on our quest to bring unique and exciting games to life. Check out our <a href="https://github.com/Death-Walrus-Studios">GitHub</a> for sneak peeks, updates, and behind-the-scenes madness.</p>
+        <h2>From the frozen depths, we rise.</h2>
+        <p>We craft with the strength of blubber and the sharpness of tusks, 
+          rising from the cold to create something new. Our journey has 
+          just begun—follow along on <a href="https://github.com/Death-Walrus-Studios">GitHub</a>, 
+          <a href="https://deathwalrusstudios.itch.io/">Itch.io</a>, and <a href="https://x.com/deathwalruscrew">X (@deathwalruscrew)</a>.
+        </p>
         
         <section class="team-section">
             <h2>THE CREW</h2>
