--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         <h2>From the frozen depths, we rise.</h2>
         <p>We craft with the strength of blubber and the sharpness of tusks, 
           rising from the cold to create something new. Our journey has 
-          just begun—follow along on <a href="https://github.com/Death-Walrus-Studios">GitHub</a>, 
-          <a href="https://deathwalrusstudios.itch.io/">Itch.io</a>, and <a href="https://x.com/deathwalruscrew">X (@deathwalruscrew)</a>.
+          just begun — follow along on <a href="https://github.com/Death-Walrus-Studios">GitHub</a>, 
+          <a href="https://deathwalrusstudios.itch.io/">Itch.io</a>, and <a href="https://x.com/deathwalruscrew">X (@deathwalruscrew)</a>. Support us on <a href="https://ko-fi.com/deathwalrusstudios">Ko-Fi.</a>
         </p>
         
         <section class="team-section">
