--- a/index.html
+++ b/index.html
@@ -185,26 +185,26 @@
             <h2>THE CREW</h2>
             <div class="team-members">
                 <div class="team-member">
-                    <img src="logo.png" alt="Alex Lutz">
-                    <h3>Alex Lutz</h3>
+                    <img src="logo.png" alt="Alex">
+                    <h3>Alex</h3>
                     <p>Lead Programmer & Studio Director</p>
                     <p>Alex has a deep passion for coding and leadership, bringing over a decade of experience in development and software engineering to guide the team at Death Walrus Studios.</p>
                 </div>
                 <div class="team-member">
-                    <img src="logo.png" alt="Cohen Derry">
-                    <h3>Cohen Derry</h3>
+                    <img src="logo.png" alt="Cohen">
+                    <h3>Cohen</h3>
                     <p>Lead Artist</p>
                     <p>Cohen is the creative force behind the studio's unique art style, blending traditional and digital techniques to create visually striking and memorable game worlds.</p>
                 </div>
                 <div class="team-member">
-                    <img src="logo.png" alt="Kipton Derry">
-                    <h3>Kipton Derry</h3>
+                    <img src="logo.png" alt="Kipton">
+                    <h3>Kipton</h3>
                     <p>Lead QA & Game Designer</p>
                     <p>Kipton excels in ensuring the quality and playability of our games, meticulously testing every detail. His keen eye for design and quality assurance guarantees that each game is both fun and flawless.</p>
                 </div>
                 <div class="team-member">
-                    <img src="logo.png" alt="Tynan Portillo">
-                    <h3>Tynan Portillo</h3>
+                    <img src="logo.png" alt="Tynan">
+                    <h3>Tynan</h3>
                     <p>Lead Composer</p>
                     <p>Tynan crafts the soundscapes that define our games, using his musical talents to create immersive and unforgettable auditory experiences.</p>
                 </div>
